[gd_scene load_steps=2 format=2]

[ext_resource path="res://Ponderada2.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 60.0
margin_top = 40.0
margin_right = 276.0
margin_bottom = 216.0
text = "1"

[node name="Button2" type="Button" parent="."]
margin_left = 77.0
margin_top = 355.0
margin_right = 270.0
margin_bottom = 524.0
text = "2"

[node name="Button3" type="Button" parent="."]
margin_left = 766.0
margin_top = 44.0
margin_right = 950.0
margin_bottom = 206.0
text = "3"

[node name="Button4" type="Button" parent="."]
margin_left = 768.0
margin_top = 363.0
margin_right = 950.0
margin_bottom = 519.0
text = "4"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
